layout bugs fixed

--- a/wwwroot/css/site.css
+++ b/wwwroot/css/site.css
@@ -467,5 +467,5 @@ textarea, .examples-container-inner {
 }
 
 .hidden-submit {
-  visibility: hidden;
+  display: none;
 }
